feat : 채팅방 리스트를 불러오는 dto 수정